financial doc line added

--- a/accounting/templates/accounting/includes/financial-documents-app/template.html
+++ b/accounting/templates/accounting/includes/financial-documents-app/template.html
@@ -92,7 +92,9 @@
                                     <span v-text="to_price(financial_document.bedehkar)">
 
                                     </span>
-                                    {{CURRENCY}}
+                                     <small class="text-muted">
+                                        {{CURRENCY}}
+                                    </small>
 
 
                                 </td>
@@ -101,7 +103,10 @@
                                     <span v-text="to_price(financial_document.bestankar)">
 
                                     </span>
-                                    {{CURRENCY}}
+                                    <small class="text-muted">
+                                        {{CURRENCY}}
+                                    </small>
+                                    
 
 
                                 </td>
@@ -112,8 +117,9 @@
 
                                     </span>
 
-                                    {{CURRENCY}}
-
+                                     <small class="text-muted">
+                                        {{CURRENCY}}
+                                    </small>
 
                                 </td>
 
