--- a/accounting/templates/accounting/invoice.html
+++ b/accounting/templates/accounting/invoice.html
@@ -12,6 +12,16 @@
     <div class="col-md-12 ">
         {% include "accounting/includes/invoice-lines-app/template.html" %}
     </div>
+
+     <div class="col-md-12 ">
+        {% include "accounting/includes/financial-document-lines-app/template.html" %}
+    </div>
+    
+  {% if add_financial_document_line_form %}
+  <div class="col-md-12">
+    {% include "accounting/includes/add-financial-document-line-app/template.html" %}
+  </div>
+  {% endif %}
 </div>
 {% endblock content %}
 
@@ -23,5 +33,9 @@
 {% include "accounting/includes/add-invoice-line-app/script.html" %}
 {% endif %}
 {% include "accounting/includes/invoice-lines-app/script.html" %}
+{% include "accounting/includes/financial-document-lines-app/script.html" %}
 
+  {% if add_financial_document_line_form %}
+    {% include "accounting/includes/add-financial-document-line-app/script.html" %}
+  {% endif %}
 {% endblock script %}
