--- a/accounting/templates/accounting/financial-document.html
+++ b/accounting/templates/accounting/financial-document.html
@@ -1,6 +1,4 @@
-{% extends "accounting/layout.html" %}
-
-{% block content %}
+{% extends "accounting/layout.html" %} {% block content %}
 <div class="row rtl farsi">
   <div class="col-md-12">
     <div class="card">
@@ -8,25 +6,24 @@
         <h5>{{financial_document.title}}</h5>
       </div>
 
-      <div class="card-body"> 
-        {% include "accounting/includes/financial-document-app/card-content.html" %}
-      </div>
+      
     </div>
   </div>
+  {% if add_financial_document_line_form %}
   <div class="col-md-12">
-    {% include "attachments/includes/links-app/template.html" %}
+    {% include "accounting/includes/add-financial-document-line-app/template.html" %}
   </div>
-
+  {% endif %}
   <div class="col-md-12">
-    {% include "attachments/includes/downloads-app/template.html" %}
-  </div>
-  <div class="col-md-12">
-    {% include "attachments/includes/comments-app/template.html" %}
+    {% include "accounting/includes/financial-document-lines-app/template.html" %}
   </div>
 
   <div class="col-md-12"></div>
 </div>
 {% endblock content %}
 {% block script %}
-{% include "core/includes/page-app/script.html" %}
+    {% if add_financial_document_line_form %}
+        {% include "accounting/includes/add-financial-document-line-app/script.html" %}
+    {% endif %}
+    {% include "accounting/includes/financial-document-lines-app/script.html" %}
 {% endblock script %}
