--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -19,6 +19,15 @@
         </a>
     </div>
 
+      <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:financial_documents' %}">
+            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                اسناد مالی
+            </h6>
+        </a>
+    </div>
+
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:products'  %}">
             <img src="{% static 'accounting/img/product.png' %}" width="64em" class="mb-2" alt="">
