--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
-        <a href="{% url 'accounting:add_event'  %}">
+        <a href="{% url 'accounting:add_financial_event'  %}">
             <img src="{% static 'accounting/img/invoice.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
                 افزودن رویداد مالی
