--- a/accounting/templates/accounting/includes/add-financial-document-line-app/template.html
+++ b/accounting/templates/accounting/includes/add-financial-document-line-app/template.html
@@ -1,53 +1,54 @@
 {% load static %}
 
-
 <div id="accordion-add-financial-document-line">
+  <div class="card" id="add-financial-document-line-app">
+    <div class="card-header">
+      <h5 class="card-title text-center farsi">
+        <button
+          class="btn btn-link"
+          data-toggle="collapse"
+          data-target="#collapse-add-financial-document-line"
+          aria-expanded="true"
+          aria-controls="collapse-add-financial-document-line"
+        >
+          <i class="fa fa-plus"></i>
+          افزودن لاین سند حسابداری
+        </button>
+      </h5>
+    </div>
+    <div
+      id="collapse-add-financial-document-line"
+      class="collapse {% if expand_add_financial_document_line %} show {% endif %}"
+      aria-labelledby="heading-add-financial-document-line"
+      data-parent="#accordion-add-financial-document-line"
+    >
+      <div class="card-body">
+        <form @submit.prevent="add_financial_document_line()">
+          <div class="row rtl">
+            <div class="col-md-12">
+              <div class="form-group">
+                <label for="">عنوان</label>
+                <input
+                  required
+                  class="form-control"
+                  v-model="title"
+                  type="text"
+                />
+              </div>
+            </div>
 
-    <div class="card" id="add-financial-document-line-app">
-        <div class="card-header">
-            <h5 class="card-title text-center farsi">
-                <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-add-financial-document-line"
-                    aria-expanded="true" aria-controls="collapse-add-financial-document-line">
-                    <i class="fa fa-plus"></i>
-                    افزودن لاین سند حسابداری
+            <div class="col-md-12"></div>
 
-
-                </button>
-            </h5>
-
-
-        </div>
-        <div id="collapse-add-financial-document-line" class="collapse {% if expand_add_financial_document_line %} show {% endif %}"
-            aria-labelledby="heading-add-financial-document-line" data-parent="#accordion-add-financial-document-line">
-
-            <div class="card-body">
-
-                <form @submit.prevent="add_financial_document_line()">
-                    <div class="row rtl">
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <label for="">عنوان</label>
-                                <input required class="form-control" v-model="title" type="text">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="exampleInputDate">تاریخ</label>
-                                <date-picker v-model="date_time"></date-picker>
-
-                                
-
-                            </div>
-                            <div>
-                                <input type="text" class="form-control" v-model="date_time" name="" id="">
-                            </div>
-                        </div> 
-                         <div class="col-md-12"></div>
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="">حساب</label>
-                                <input class="form-control" v-model="account_code" @input="select_account()"
-                                    type="text">
-                                <!-- <div class="my-2" v-if="">
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="">حساب</label>
+                <input
+                  class="form-control"
+                  v-model="account_code"
+                  @input="select_account()"
+                  type="text"
+                />
+                <!-- <div class="my-2" v-if="">
                                 <a :href="account.get_absolute_url">
                                     <div class="media">
                                         <img :src="account.logo" class="rounded" width="48" alt="">
@@ -61,26 +62,27 @@
 
                                 </a>
                             </div> -->
-                                <div class="my-2">
+                <div class="my-2">
+                  {% include "accounting/includes/account-app/media.html" %}
+                </div>
 
-                                    {% include "accounting/includes/account-app/media.html" %}
-                                </div>
-
-                                <h5 class="text-danger">
-                                    <a target="_blank" href="{% url 'accounting:selection' %}">
-                                        <span>
-                                            همه حساب ها
-                                        </span>
-                                    </a>
-                                </h5>
-                            </div>
-                        </div>
-                         <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="">رویداد</label>
-                                <input class="form-control" v-model="financial_event.id" @input="select_financial_event_by_id()"
-                                    type="text">
-                                <!-- <div class="my-2" v-if="">
+                <h5 class="text-danger">
+                  <a target="_blank" href="{% url 'accounting:selection' %}">
+                    <span> همه حساب ها </span>
+                  </a>
+                </h5>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="">رویداد</label>
+                <input
+                  class="form-control"
+                  v-model="financial_event.id"
+                  @input="select_financial_event_by_id()"
+                  type="text"
+                />
+                <!-- <div class="my-2" v-if="">
                                 <a :href="account.get_absolute_url">
                                     <div class="media">
                                         <img :src="account.logo" class="rounded" width="48" alt="">
@@ -94,28 +96,35 @@
 
                                 </a>
                             </div> -->
-                                <div class="my-2">
-                                    <h5>
-                                        <span v-text="financial_event.title"></span>
-                                    </h5>
-                                </div>
+                <div class="my-2">
+                  <h5 v-if="financial_event.title">
+                    <a :href="financial_event.get_absolute_url">
+                      <span v-text="financial_event.title"></span>
+                    </a>
+                  </h5>
+                </div>
 
-                                <h5 class="text-danger">
-                                    <a target="_blank" href="{% url 'accounting:financial_events' %}">
-                                        <span>
-                                            همه رویداد ها
-                                        </span>
-                                    </a>
-                                </h5>
-                            </div>
-                        </div>
+                <h6 class="text-danger">
+                  <a
+                    target="_blank"
+                    href="{% url 'accounting:financial_events' %}"
+                  >
+                    <span> همه رویداد ها </span>
+                  </a>
+                </h6>
+              </div>
+            </div>
 
-                            <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="">سند</label>
-                                <input class="form-control" v-model="financial_document.id" @input="select_financial_document_by_id()"
-                                    type="text">
-                                <!-- <div class="my-2" v-if="">
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="">سند</label>
+                <input
+                  class="form-control"
+                  v-model="financial_document.id"
+                  @input="select_financial_document_by_id()"
+                  type="text"
+                />
+                <!-- <div class="my-2" v-if="">
                                 <a :href="account.get_absolute_url">
                                     <div class="media">
                                         <img :src="account.logo" class="rounded" width="48" alt="">
@@ -129,75 +138,91 @@
 
                                 </a>
                             </div> -->
-                                <div class="my-2">
-                                    <h5>
-                                        <span v-text="financial_document.title"></span>
-                                    </h5>
-                                </div>
+                <div class="my-2">
+                  <h5 v-if="financial_document.title">
+                    <a :href="financial_document.get_absolute_url">
+                      <span v-text="financial_document.title"></span>
+                    </a>
+                  </h5>
+                </div>
 
-                                <h5 class="text-danger">
-                                    <a target="_blank" href="{% url 'accounting:financial_documents' %}">
-                                        <span>
-                                            همه سند ها
-                                        </span>
-                                    </a>
-                                </h5>
-                            </div>
-                        </div>
+                <h6 class="text-danger">
+                  <a
+                    target="_blank"
+                    href="{% url 'accounting:financial_documents' %}"
+                  >
+                    <span> همه سند ها </span>
+                  </a>
+                </h6>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="exampleInputDate">تاریخ</label>
+                <date-picker v-model="date_time"></date-picker>
+              </div>
+              <div>
+                <input
+                  type="text"
+                  class="form-control"
+                  v-model="date_time"
+                  name=""
+                  id=""
+                />
+              </div>
+            </div>
+            <div class="col-md-12"></div>
+            <div class="col-md-3">
+              <div class="form-group">
+                <label for=""
+                  >بدهکار
 
-                        <div class="col-md-12">
-                        </div>
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="">بدهکار
+                  <span class="text-danger" v-text="to_price(bedehkar)"></span>
+                  {{CURRENCY}}
+                </label>
+                <input class="form-control" v-model="bedehkar" type="number" />
+              </div>
+              <btn class="btn btn-info" @click="swap()">
+                <img
+                  src="{% static 'leo/img/exchange-v.png' %}"
+                  width="16"
+                  alt=""
+                />
+              </btn>
 
-                                    <span class="text-danger" v-text="to_price(bedehkar)"></span>
-                                    {{CURRENCY}}
+              <div class="form-group">
+                <label for=""
+                  >بستانکار
 
-                                </label>
-                                <input class="form-control" v-model="bedehkar" type="number">
+                  <span
+                    class="text-success"
+                    v-text="to_price(bestankar)"
+                  ></span>
+                  {{CURRENCY}}
+                </label>
+                <input class="form-control" v-model="bestankar" type="number" />
+              </div>
+            </div>
 
+            <div class="col-md-12">
+              <button type="submit" class="btn btn-success">
+                <i class="fa fa-plus"></i>افزودن
+              </button>
+            </div>
+            <div class="col-md-12 my-2" v-if="message.show">
+              <div :class="'alert alert-'+message.color">
+                <div v-html="message.body"></div>
+              </div>
+            </div>
 
-                            </div>
-                            <btn class="btn btn-info " @click="swap()">
-                                <img src="{% static 'leo/img/exchange-v.png' %}" width="16" alt="">
-                            </btn>
-
-
-
-                            <div class="form-group">
-                                <label for="">بستانکار
-
-                                    <span class="text-success" v-text="to_price(bestankar)"></span>
-                                    {{CURRENCY}}
-                                </label>
-                                <input class="form-control" v-model="bestankar" type="number">
-
-                            </div>
-                        </div>
-
-                        <div class="col-md-12">
-                            <button type="submit" class="btn btn-success">
-                                <i class="fa fa-plus"></i>افزودن
-                            </button>
-                        </div>
-                        <div class="col-md-12 my-2" v-if="message.show">
-                            <div :class="'alert alert-'+message.color">
-                                <div v-html="message.body"></div>
-                            </div>
-                        </div>
-
-
-                        <!-- <div class="col-md-12" vb-show="message.show">
+            <!-- <div class="col-md-12" vb-show="message.show">
                     <div class="'alert alert-'message.color">
                         <div vb-html="message.body"></div>
                     </div>
                 </div> -->
-
-                    </div>
-
-                </form>
-            </div>
-        </div>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </div>
