--- a/accounting/templates/accounting/account.html
+++ b/accounting/templates/accounting/account.html
@@ -19,6 +19,13 @@
         {% include "accounting/includes/add-account-app/template.html" %}
     </div>
 
+    {% if add_financial_document_line_form %}
+     
+    <div class="col-md-12">
+        {% include "accounting/includes/add-financial-document-line-app/template.html" %}
+    </div>
+  
+    {% endif %}
      
 
 
@@ -31,5 +38,9 @@
 {% include "accounting/includes/accounts-app/script.html" %}
 {% include "accounting/includes/add-account-app/script.html" %}
 {% include "accounting/includes/financial-document-lines-app/script.html" %}
+{% if add_financial_document_line_form %}
+  
+{% include "accounting/includes/add-financial-document-line-app/script.html" %}
+{% endif %}
 
 {% endblock script %}
