--- a/accounting/templates/accounting/includes/add-financial-document-line-app/template.html
+++ b/accounting/templates/accounting/includes/add-financial-document-line-app/template.html
@@ -42,50 +42,42 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="">حساب</label>
+                {% if not account %}
+
                 <input
                   class="form-control"
-                  v-model="account_code"
+                  v-model="account.code"
                   @input="select_account()"
                   type="text"
                 />
-                <!-- <div class="my-2" v-if="">
-                                <a :href="account.get_absolute_url">
-                                    <div class="media">
-                                        <img :src="account.logo" class="rounded" width="48" alt="">
-                                        <div class="media-body mr-2">
-                                            <h5> <span v-text="account.code"></span></h5>
-                                            <h5> <span v-text="account.name"></span></h5>
-                                            <h5> <span v-text="to_price(account.balance)"></span></h5>
-                                            <h5></h5>
-                                        </div>
-                                    </div>
+                {% endif %}
 
-                                </a>
-                            </div> -->
-                <div class="my-2">
+                <div class="my-2" v-if="account.name">
                   {% include "accounting/includes/account-app/media.html" %}
                 </div>
+                {% if not account %}
 
-                <h5 class="text-danger">
+                <h6 class="text-danger my-2">
                   <a target="_blank" href="{% url 'accounting:selection' %}">
                     <span> همه حساب ها </span>
                   </a>
-                </h5>
+                </h6>
+                {% endif %}
               </div>
             </div>
             <div class="col-md-4">
               <div class="form-group">
                 <label for="">رویداد</label>
                 {% if not financial_event %}
-                  
+
                 <input
-                class="form-control"
-                v-model="financial_event.id"
-                @input="select_financial_event_by_id()"
-                type="text"
+                  class="form-control"
+                  v-model="financial_event.id"
+                  @input="select_financial_event_by_id()"
+                  type="text"
                 />
                 {% endif %}
-               
+
                 <div class="my-2">
                   <h5 v-if="financial_event.title">
                     <a :href="financial_event.get_absolute_url">
@@ -94,16 +86,16 @@
                   </h5>
                 </div>
                 {% if not financial_event %}
-  
+
                 <h6 class="text-danger">
-                    <a
+                  <a
                     target="_blank"
                     href="{% url 'accounting:financial_events' %}"
-                    >
+                  >
                     <span> همه رویداد ها </span>
-                </a>
-            </h6>
-            {% endif %}
+                  </a>
+                </h6>
+                {% endif %}
               </div>
             </div>
 
