--- a/accounting/templates/accounting/includes/add-service-app/template.html
+++ b/accounting/templates/accounting/includes/add-service-app/template.html
@@ -1,24 +1,19 @@
-<div class="card" id="add-product-app">
+<div class="card" id="add-service-app">
     <div class="card-header">
-        افزودن محصول جدید
+        افزودن سرویس جدید
     </div>
     <div class="card-body">
-        <button v-show="!show_form" @click="show_form=true" class="btn btn-info">افزودن کالا</button>
+        <button v-show="!show_form" @click="show_form=true" class="btn btn-info">افزودن سرویس</button>
         <div v-show="show_form">
-            <form @submit.prevent="add_product()">
+            <form @submit.prevent="add_service()">
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="">نام کالا</label>
+                            <label for="">نام سرویس</label>
                             <input type="text" class="form-control" v-model="title">
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="">بارکد</label>
-                            <input type="text" class="form-control" v-model="barcode">
-                        </div>
-                    </div>
+                     
 
                     <div class="col-md-4">
                         <div class="form-group">
