--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -36,6 +36,14 @@
             </h6>
         </a>
     </div>
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:services'  %}">
+            <img src="{% static 'accounting/img/product.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                خدمات
+            </h6>
+        </a>
+    </div>
 
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:invoices'  %}">
