add financial document line ok

--- a/accounting/templates/accounting/financial-event.html
+++ b/accounting/templates/accounting/financial-event.html
@@ -1,25 +1,30 @@
 {% extends "accounting/layout.html" %}
-
-
 {% block content %}
 <div class="row rtl farsi">
-       
-
-   <div class="col-md-12">
-    <div class="card">
-            
-        <div class="card-body">
-
-        </div>
+     
+    <div class="col-md-12">
+        {% include "accounting/includes/financial-event-app/card.html" %}
     </div>
-   </div>
+     
 
-
+    <div class="col-md-12 ">
+        {% include "accounting/includes/financial-document-lines-app/template.html" %}
+    </div>
+    
+  {% if add_financial_document_line_form %}
+  <div class="col-md-12">
+    {% include "accounting/includes/add-financial-document-line-app/template.html" %}
+  </div>
+  {% endif %}
 </div>
 {% endblock content %}
 
-
 {% block script %}
-{% include "accounting/includes/financial-event-app/script.html" %}
 
+{% include "accounting/includes/financial-event-app/script.html" %}
+ 
+  
+  {% if add_financial_document_line_form %}
+    {% include "accounting/includes/add-financial-document-line-app/script.html" %}
+  {% endif %}
 {% endblock script %}
