--- a/accounting/templates/accounting/financial-events.html
+++ b/accounting/templates/accounting/financial-events.html
@@ -24,6 +24,7 @@
 </script> 
 
 {% include "accounting/includes/financial-events-app/script.html" %}
+{% include "accounting/includes/account-app/select-script.html" %}
 {% if add_financial_event_form %}
 {% include "accounting/includes/add-financial-event-app/script.html" %}
 {% endif %}
