--- a/templates/phoenix/includes/common-script.html
+++ b/templates/phoenix/includes/common-script.html
@@ -53,6 +53,7 @@
     let CURRENCY = '{{CURRENCY}}'
     let current_datetime = "{{current_datetime}}"
     let current_date = "{{current_date}}"
+    let current_time = "{{current_time}}"
     function leolog(data) {
         if (DEBUG) {
             console.log(data)
