--- a/accounting/templates/accounting/includes/add-invoice-app/script.html
+++ b/accounting/templates/accounting/includes/add-invoice-app/script.html
@@ -5,7 +5,7 @@
     data: {
     title: "",
     event_date: current_date,
-    event_time: "00:00:00",
+    event_time: current_time,
     event_datetime: current_datetime,
     bedehkar: false ,
     bestankar: false ,  
